fix: [CDS-85271]: New nav - Profile overview link is not visible when the side nav is collapsed (#19124)
* fix: [CDS-85271]: profile overview link was not visible in  case of collapsed side nav

* fix: removed extra padding

--- a/src/modules/10-common/navigation/SideNavV2/SideNavFooter/SideNavFooter.module.scss
+++ b/src/modules/10-common/navigation/SideNavV2/SideNavFooter/SideNavFooter.module.scss
@@ -49,7 +49,21 @@
 }
 
 .link {
-  padding-left: var(--spacing-small) !important;
+  padding: var(--spacing-small) var(--spacing-medium) !important;
+  border-radius: 4px;
+  text-decoration: none;
+  margin-bottom: var(--spacing-tiny) !important;
+  cursor: pointer;
+
+  &:hover {
+    text-decoration: none;
+    color: var(--primary-8);
+    background-color: rgba(210, 230, 255);
+  }
+
+  &.selected {
+    background-color: rgba(210, 230, 255);
+  }
 }
 
 .section {
